ForbiddenAPI: replace Collections.singletonList with List.of